# gathering_surf

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm  Dockerfile.cluster  Dockerfile.local  Dockerfile.prod  Dockerfile.raspberry  README.md  benchmark.sh  cache-freshner.yaml  deny.toml  docker-compose.replicas.yml  docker-compose.yml  fly.toml  justfile  kube-deployment.yaml  nginx.conf  tailwind.config.js  tsconfig.json
.github/workflows/: CI.yml  audit.yml
assets/: styles.css
assets/Fonts/WEB/: README.md
assets/Fonts/WEB/css/: panchang.css
assets/static/: index.js  index.min.js  observer.js
client/: fallback.js  fallback.ts  index.js  index.ts  parseForecast.js  parseRealtime.js  parseWaterQuality.js  utilities.js  utilities.ts
client/parsers/: forecast.js  forecast.ts  index.js  realtime.js  realtime.test.js  realtime.ts  waterQuality.js  waterQuality.ts
config/: base.yml
src/: configuration.rs  forecast.rs  latest.rs  lib.rs  main.rs  quality.rs  realtime.rs  spot.rs  water_quality.rs
src/routes/: forecast.rs  glimpse.rs  handle_404.rs  latest.rs  mod.rs  realtime.rs  root.rs  watch.rs
src/styles/: styles.css
src/utils/: mod.rs  redis_utils.rs
templates/: base.html  error.html  forecast.html  glimpse.html  index.html  latest.html  realtime.html  water_quality.html
templates/includes/: chartLoader.html  exit.html  footer.html  forecast.html  forecastLegend.html  header.html  latest.html  legendLoader.html  live_feed.html  nav.html  precipitationLegend.html  temperatureLegend.html
tests/api/: forecast.rs  glimpse.rs  health_check.rs  helpers.rs  latest.rs  main.rs  not_found.rs  realtime.rs  root.rs
tests/api/mocks/: mod.rs
tests/api/snapshots/: api__forecast__it_returns_the_forecast_data_as_json.snap  api__realtime__it_returns_the_realtime_data_as_json.snap  api__root__it_returns_the_index.snap
