[package]
name = "gathering_surf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = "0.7"
chrono = "0.4"
chrono-tz = "0.8.6"
config = { version = "0.14", default-features = false, features = ["yaml"] }
hyper = { version = "1", features = ["full"] }
lazy_static = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
serde_yaml = "0.9"
tera = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] } 
