[package]
name = "gathering_surf"
version = "0.1.13"
edition = "2024"
default-run = "gathering_surf"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.8", features = ["ws"] }
bb8 = "0.9"
bb8-redis = "0.24"
chrono = "0.4"
chrono-tz = "0.10"
config = { version = "0.15", default-features = false, features = ["yaml"] }
hyper = { version = "1", features = ["full"] }
maud = { git = "https://github.com/austionian/maud.git", rev = "b4bdfe31e9c3de97dd33144258b096beb98c06e3", features = [
  "axum",
] }
notify = "8"
redis = { version = "0.32", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json = "1"
serde_yaml = "0.9"
tera = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.15"
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dependencies.openssl-sys]
version = "0.9"
features = ["vendored"]

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
wiremock = "0.6.0"

[profile.dev.package]
insta.opt-level = 3

[features]
mock-time = []

# [lints.clippy]
# pedantic = { level = "warn" }
